--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: hsla(0, 0%, 100%, 1);
+  background-image: radial-gradient(
+      at 96% 96%,
+      hsla(190, 100%, 70%, 1) 0px,
+      transparent 50%
+    ),
+    radial-gradient(at 0% 0%, hsla(291, 100%, 76%, 1) 0px, transparent 50%);
+}
